fix : set input text-align to start

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ form {
   border-radius: 0.2rem;
   padding: 0.45rem;
   font-weight: bolder;
+  text-align: start;
 }
 
 #note-text {
@@ -108,6 +109,7 @@ form {
   height: 30em;
   max-height: 40em;
   border-radius: 0.2rem;
+  text-align: start;
 }
 
 #note-stats {
